# BERT_testing

./: .gitignore  README.md  main.py  pyproject.toml
data_loader/: data_loading_processing.py
